--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.7",
     "exceljs": "^4.4.0",
     "file-saver": "^2.0.5",
     "js-file-download": "^0.4.12",
