--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT=5000
 DB_USER=postgres
-DB_HOST=35.187.239.163
-DB_PASSWORD=A1n13a1n13d4@
-DB_PORT=5432
+DB_HOST=YOUR_HOST
+DB_PASSWORD=YOUR_PASSWORD
+DB_PORT=YOUR_PORT_NO
